--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<div>
+    <h1>Dashboard</h1>
+    <p>Hai {{user.sub}}</p>
+    <button (click)="logout()">Logout</button>
+</div>
