setup openid google but fail

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,4 +11,5 @@
         </div>
         <button type="submit">Login</button>
     </form>
+    <button type="button" (click)="signInWithGoogle()">Login by Google</button>
 </div>
